# YanGuan-NLP

./: .gitignore  CLAUDE.md  README.md  data_cleaner.py  docker-compose.yml  index.html  main.py  start.sh  text_analyzer.py
.claude/: CLAUDE.md
.claude/agents/: backend-agent.md  documentation-agent.md  frontend-agent.md  nlp-agent.md  qa-agent.md  visualization-agent.md
.playwright-mcp/: dashboard-snapshot.md  page-2026-06-05T14-25-07-978Z.yml  page-2026-06-05T15-26-32-526Z.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/api/: aggregation.py  coherence.py  dashboard.py  deps.py  emotes.py  keywords.py  llm.py  network.py  predict.py  sentiment.py  topic_sentiment.py  topics.py  trends.py
backend/app/models/: __init__.py  base.py  comment.py  comment_group.py  emote.py  keyword.py  network.py  pipeline.py  sentiment.py  topic.py
backend/app/schemas/: __init__.py  aggregation.py  coherence.py  common.py  dashboard.py  emote.py  keyword.py  llm.py  network.py  predict.py  sentiment.py  topic.py  topic_sentiment.py  trend.py
backend/app/services/: aggregation.py  cleaner.py  coherence.py  data_loader.py  emote.py  gb_predictor.py  keyword.py  label_generator.py  llm_labeler.py  network.py  predictor.py  sentiment.py  topic.py  topic_sentiment.py  trend.py
backend/app/utils/: chinese.py  emote.py  resources.py  tokenizer.py
backend/backend/data/model/: lda_dictionary  lda_model  lda_model.expElogbeta.npy  lda_model.id2word  lda_model.state
backend/data/: emote_sentiment.txt  merged_stopwords.txt  pkuseg_dict.txt  source_data.csv  topic_snapshot.json  同义词.txt  自定义字典.txt
backend/data/model/: lda_dictionary  lda_model  lda_model.expElogbeta.npy  lda_model.id2word  lda_model.state
backend/scripts/: analyze_noise.py  run_bertopic_only.py  run_pipeline.py  tokenization_audit.py
backend/tests/: conftest.py  test_cleaner.py  test_emote.py
backend/tests/test_api/: __init__.py  test_aggregation.py  test_coherence.py  test_dashboard.py  test_emotes.py  test_llm.py  test_network.py  test_predict.py  test_sentiment_ml.py  test_topic_sentiment.py  test_topics.py  test_trends.py
backend/tests/test_services/: test_coherence.py  test_llm_labeler.py
data/: 同义词.txt  毕业去向讨论.csv
frontend/: Dockerfile  components.d.ts  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
legacy/: README.md  cluster_classifier.py  config.py  lda_modeler.py  sentiment_analyzer.py
scripts/: seed_db.py
(+80 files in other folders)
